feat: index.html 한글화 및 SEO 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 서비스 설명 메타 태그 -->
+    <meta
+      name="description"
+      content="RecyClean은 AI 기반 분리수거 도우미 서비스로 재활용 품목 분류와 맞춤형 가이드를 실시간으로 제공해요."
+    />
+    <meta
+      name="keywords"
+      content="RecyClean, AI 분리수거, 재활용 가이드, waste sorting, recycling assistant, 환경 보호"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="application-name" content="RecyClean" />
+    <meta name="author" content="RecyClean Team" />
+    <meta name="theme-color" content="#14A37F" />
+    <meta name="color-scheme" content="light dark" />
     <title>RecyClean</title>
   </head>
   <body>
