--- a/index.html
+++ b/index.html
@@ -13,13 +13,33 @@
     <!-- 서비스 설명 메타 태그 -->
     <meta
       name="description"
-      content="RecyClean은 AI 기반 분리수거 도우미 서비스로 재활용 품목 분류와 맞춤형 가이드를 실시간으로 제공해요."
+      content="AI로 재활용을 도와주고 생활 속 분리수거 계획까지 세워주는 맞춤 어시스턴트, RecyClean."
     />
     <meta
       name="keywords"
       content="RecyClean, AI 분리수거, 재활용 가이드, waste sorting, recycling assistant, 환경 보호"
     />
     <meta name="robots" content="index, follow" />
+    <!-- 링크 미리보기용 오픈 그래프(Open Graph) 메타 태그 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="RecyClean" />
+    <meta property="og:title" content="RecyClean | AI 분리수거 도우미" />
+    <meta
+      property="og:description"
+      content="AI로 재활용을 도와주고 생활 속 분리수거 계획까지 세워주는 맞춤 어시스턴트, RecyClean."
+    />
+    <meta property="og:url" content="https://recyclean.com/" />
+    <meta property="og:image" content="/icons/icon-512.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <!-- 링크 미리보기용 트위터 카드(Twitter Card) 메타 태그 -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RecyClean | AI 분리수거 도우미" />
+    <meta
+      name="twitter:description"
+      content="AI로 재활용을 도와주고 생활 속 분리수거 계획까지 세워주는 맞춤 어시스턴트, RecyClean."
+    />
+    <meta name="twitter:image" content="/icons/icon-512.png" />
     <meta name="application-name" content="RecyClean" />
     <meta name="author" content="RecyClean Team" />
     <meta name="theme-color" content="#14A37F" />
