feat: 라이트/다크 모드별 브라우저 테마색 적용

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <meta name="twitter:image" content="/icons/icon-512.png" />
     <meta name="application-name" content="RecyClean" />
     <meta name="author" content="RecyClean Team" />
-    <meta name="theme-color" content="#14A37F" />
+    <meta name="theme-color" content="#2f855a" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#34d399" media="(prefers-color-scheme: dark)" />
     <meta name="color-scheme" content="light dark" />
     <title>RecyClean</title>
   </head>
